--- a/.env
+++ b/.env
@@ -3,16 +3,12 @@ RAZORPAY_ID_KEY="rzp_test_VLSc7qRsFdhdrf"
 RAZORPAY_SECRET_KEY="avx5L9pXCMRhxBAkLDSAl8Xu"
 
 module.exports = {
-    EMAIL :'indusunkari54@gmail.com',
-    PASSWORD :'dvxs cmbd ykud orfn'
+    EMAIL :'nikhilareddygandlapati@gmail.com',
+    PASSWORD :'grnf mobx ssnw ioin'
 }
+
+TWILIO_ACCOUNT_SID=ACb665c31f221de47e4eb7b4cbc59c063d
+TWILIO_AUTH_TOKEN=8dd3dfba489660df08420dd24bca94a4
  
-
-
-#  TWILIO_ACCOUNT_SID=ACe6a6c7e3ff7262c7d751e91598536327
-# TWILIO_AUTH_TOKEN=600f110aa5b6b702563b0736a1165749
-
- TWILIO_ACCOUNT_SID=AC0bd036657d91d0f02e9924014ee2811a
-TWILIO_AUTH_TOKEN=5b26fac20ef040a989a1a6a0358c22c0
 
 
