--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.2",
     "balanced-match": "^1.0.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "boolbase": "^1.0.0",
     "brace-expansion": "^1.1.11",
@@ -71,6 +72,7 @@
     "tslib": "^2.6.2",
     "twilio": "^4.21.0",
     "valid-data-url": "^3.0.1",
+    "validators": "^0.3.1",
     "web-resource-inliner": "^6.0.1",
     "webidl-conversions": "^3.0.1",
     "whatwg-url": "^5.0.0"
